fix space on mobile and disable email

--- a/src/components/UploadAvatar/UploadAvatar.module.css
+++ b/src/components/UploadAvatar/UploadAvatar.module.css
@@ -52,7 +52,7 @@
 }
 
 .iconLabel {
-  cursor: url('../../assets/img/cursors/mdi_cursor-pointer.svg'), auto;
+  cursor: var(--cursor-h);
 }
 
 .upload {
